# mqtt_client_dht22

./: .gitignore  README.md  pyproject.toml
mqtt_client_dht22/: bkp.sql  client.py  create_db.sql  database.py  db_smt.sql  ftp.py  generate_sql.py  generate_values.sql  mysql_backup.py  server_mqtt.py
